Adding JavaDoc